# zvkeyboard

./: CMakeLists.txt  ZVKeyboardConfig.cmake.in  zvkeyboard.cpp  zvkeyboard.qrc
include/: zvkeyboard.h
zvkeyboard/: ZVKApplicationWindow.qml
zvkeyboard/layouts/de_DE/: main.qml
zvkeyboard/layouts/fallback/: main.qml  numbers.qml  symbols.qml
